Updated to use latest Java 21, latest Cucumber Java version 7.14.0, latest Selenium version 4.15.0 and latest Rest assured version 5.3.2